# tiny-kaldi

./: .gitignore  .travis.yml  README.md  VoskJS.js  WIP-kaldi.patch  example.js  index.html  vosk.js
js/: Makefile  bindings.cc  utils.cc  utils.h  vosk.idl  vosk.post.js  vosk.pre.js
js/example/: VoskJS.js  example.js  index.html
python/: CMakeLists.txt  cmake.py  cmake_extensions.py  setup.py
python/example/: requirements.txt  test_local.py  test_microphone.py
src/: kaldi_recognizer.cc  kaldi_recognizer.h  model.h
test.out/: CMakeCache.txt  Makefile
travis/: CompilerOptions.cmake  build-wheel.sh  build-wheels.sh  conanfile.txt
travis/js/: Dockerfile  kaldi.patch
travis/windows/: build-kaldi.sh  build-openblas.sh  build-openfst.sh  build-wheel.sh  error-C2371-SSIZE_T-redefinition.patch  util.sh
